update fit_horseshoeocc function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,5 @@ S3method(summary,horseshoeocc)
 S3method(summary,horseshoeocc_derived)
 export("%>%")
 export(derived_parameters)
-export(horseshoeocc)
+export(fit_horseshoeocc)
 importFrom(magrittr,"%>%")
