--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 S3method(plot,horseshoeocc)
 S3method(plot,summary.horseshoeocc)
 S3method(plot,summary.horseshoeocc_derived)
-S3method(print,horseshoeocc_derivedsum)
 S3method(print,summary.horseshoeocc)
+S3method(print,summary.horseshoeocc_derived)
 S3method(summary,horseshoeocc)
 S3method(summary,horseshoeocc_derived)
 export("%>%")
